--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,5 +1,10 @@
 .gpt3__blog {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -18,24 +23,38 @@
 }
 
 .gpt3__blog-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
 }
 
 .gpt3__blog-container_groupA {
+  -webkit-box-flex: 0.75;
+  -ms-flex: 0.75;
   flex: 0.75;
   margin-right: 2rem;
 }
 
 .gpt3__blog-container_groupB {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 2rem 1fr;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
 }
 
 @media screen and (max-width: 990px) {
   .gpt3__blog-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
 
@@ -52,12 +71,13 @@
   }
 }
 
-@media screen and (max-with: 700px) {
+@media screen and (max-width: 700px) {
   .gpt3__blog-container_groupB {
+    -ms-grid-columns: 1fr;
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .gpt3__blog-container_groupB .gpt3__blog-container_article {
+  .gpt3__blog-container_groupA .gpt3__blog-container_article {
     width: 100%;
   }
 
@@ -67,9 +87,9 @@
   }
 }
 
-@media screen and (max-with: 550px) {
-    .gpt3__blog-heading h1 {
-      font-size: 34px;
-      line-height: 42px;
-    }
+@media screen and (max-width: 550px) {
+  .gpt3__blog-heading h1 {
+    font-size: 34px;
+    line-height: 42px;
+  }
 }
