--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -1,7 +1,12 @@
 .gpt3__blog-container_article {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   background: var(--color-footer);
 }
@@ -18,8 +23,15 @@
 }
 
 .gpt3__blog-container_article-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 1rem 1.5rem;
   height: 100%;
@@ -44,12 +56,12 @@
 }
 
 .gpt3__blog-container_article-content p:last-child {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 550px) {
-    .gpt3__blog-container_article-content h3  {
-        font-size: 18px;
-        line-height: 25px;
-    }
+  .gpt3__blog-container_article-content h3 {
+    font-size: 18px;
+    line-height: 25px;
+  }
 }
