--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -1,9 +1,18 @@
 .gpt3__cta {
   border: 1px solid white;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
   padding: 2rem;
   margin: 4rem;
@@ -28,8 +37,14 @@
 }
 
 .gpt3__cta-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-left: 2rem;
 }
@@ -51,6 +66,9 @@
 
 @media screen and (max-width: 650px) {
   .gpt3__cta {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
