--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -1,13 +1,24 @@
 .gpt3__features-container__feature {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
   margin: 1rem;
 }
 
 .gpt3__features-container__feature-title {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   max-width: 180px;
   margin-right: 2rem;
@@ -26,13 +37,18 @@
   width: 38px;
   height: 3px;
   background: var(--gradient-bar);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 0.25rem;
 }
 
 .gpt3__features-container_feature-text {
+  -webkit-box-flex: 2;
+  -ms-flex: 2;
   flex: 2;
   max-width: 390px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
