--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,15 +1,29 @@
 .gpt3__navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 
   padding: 2rem 6rem;
 }
 
 .gpt3__navbar-links {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -23,12 +37,23 @@
 }
 
 .gpt3__navbar-links_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
 }
 .gpt3__navbar-sign {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -71,9 +96,18 @@
 }
 
 .gpt3__navbar-menu_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
   align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   text-align: end;
   background: var(--color-footer);
@@ -84,6 +118,7 @@
   margin-top: 1rem;
   min-width: 210px;
   border-radius: 5px;
+  -webkit-box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
 }
 
@@ -101,6 +136,8 @@
   }
 
   .gpt3__navbar-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
