--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,12 +1,25 @@
 .gpt3__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .gpt3__header-content {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin-right: 5rem;
 }
@@ -32,10 +45,14 @@
 .gpt3__header-content__input {
   width: 100%;
   margin: 2rem 0 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .gpt3__header-content__input input {
+  -webkit-box-flex: 2;
+  -ms-flex: 2;
   flex: 2;
   width: 100%;
   min-height: 50px;
@@ -51,6 +68,8 @@
 }
 
 .gpt3__header-content__input button {
+  -webkit-box-flex: 0.6;
+  -ms-flex: 0.6;
   flex: 0.6;
   width: 100%;
   min-height: 50px;
@@ -69,8 +88,14 @@
 
 .gpt3__header-content__people {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-top: 2rem;
 }
@@ -91,9 +116,17 @@
 }
 
 .gpt3__header-image {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -104,6 +137,9 @@
 
 @media screen and (max-width: 1050px) {
   .gpt3__header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
@@ -124,6 +160,9 @@
   }
 
   .gpt3__header-content__people {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
