--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -1,23 +1,14 @@
 .gpt3__whatgpt3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 
   padding: 2rem;
   background: var(--color-footer);
-
-  background: -moz-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
-
-  background: -webkit-radial-gradient(
-    circle at 30% -100%,
-    #042c54 25%,
-    rgba(4, 44, 84, 1) 85%,
-    rgba(27, 120, 222, 1) 100%
-  );
 
   background: -o-radial-gradient(
     circle at 30% -100%,
@@ -26,8 +17,9 @@
     rgba(27, 120, 222, 1) 100%
   );
 
-  background: -ms-radial-gradient(
-    circle at 30% -100%,
+  background: -o-radial-gradient(
+    30% -100%,
+    circle,
     #042c54 25%,
     rgba(4, 44, 84, 1) 85%,
     rgba(27, 120, 222, 1) 100%
@@ -40,10 +32,14 @@
     rgba(27, 120, 222, 1) 100%
   );
 
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .gpt3__whatgpt3-feature {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -56,9 +52,18 @@
 }
 
 .gpt3__whatgpt3-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 
   margin: 4rem 0 2rem;
@@ -82,17 +87,28 @@
 }
 
 .gpt3__whatgpt3-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
 
   margin-top: 2rem;
 }
 
 .gpt3__whatgpt3-container .gpt3__features-container__feature {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   min-width: 210px;
   display: unset;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -102,7 +118,12 @@
 
 @media screen and (max-width: 850px) {
   .gpt3__whatgpt3-heading {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
     margin-bottom: 0rem;
   }
@@ -114,6 +135,9 @@
 
 @media screen and (max-width: 650px) {
   .gpt3__whatgpt3-feature .gpt3__features-container__feature {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
